tests/semantic/invalid/type_mismatch_assign.src
fn main() -> int {
    int x;
    x = 3.14;
    return 0;
}
